# Aqua-Sense

./: .gitignore  Cargo.toml  README.md  aqua_sense.rs  debug_probes.md  screen_test.rs
.cargo/: config  config.toml
