[package]
name = "aqua_sense"
version = "0.1.0"


[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"


[dependencies]
rp2040-hal = "0.9.0"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
rp2040-boot2 = "0.3.0"
lcd_1602_i2c = "0.3.0"
fugit = "0.3.7"


[[bin]]
name = "blinky"
path = "blinky.rs"

[[bin]]
name = "aqua_sense"
path = "aqua_sense.rs"

[[bin]]
name = "screen_test"
path = "screen_test.rs"
